<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="about_us_url_en" translatable="false">http://www.grigora.com/about_us/en/</string>
    <string name="about_us_url_fr" translatable="false">http://www.grigora.com/about_us/fr/</string>
    <string name="terms_and_conditions" translatable="false">http:www.grigora.com/terms-and-condition/en/</string>
    <string name="privacy_policy_url" translatable="false">http://3.13.78.53/privacy-policy.html</string>
    <string name="default_notification_channel_id" translatable="false">212</string>
    <string name="facebook_app_id" translatable="false">243662833424861</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb243662833424861</string>
    <string name="app_name">Grigora</string>
    <string name="paystack_test_public_key" tools:ignore="MissingTranslation">pk_test_1589707187876487d9643c4845406aee4b88b90e</string>
    <string name="paystack_live_public_key" tools:ignore="MissingTranslation">pk_live_0bb1c5ea15ae4223a872e524ea372efad9db4583</string>
    <string name="login">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_phone_number">Email/Phone number</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="please_enter_your_registered">Please enter your registered email to recover your password via email</string>
    <string name="please_enter_your_registered_pin">Please enter your registered email to recover your security pin via email</string>
    <string name="email">Email</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="select_area">Select Area</string>
    <string name="continueTxt">Continue</string>
    <string name="area">Area</string>
    <string name="loading_getting_location">Getting Location</string>
    <string name="deliver_to">Deliver to : </string>
    <string name="loading">Loading</string>
    <string name="error_location">Please select location</string>
    <string name="error_location_type">Please select location type</string>
    <string name="login_required">Login Required</string>
    <string name="to_continue_you_need_to_be_logged_in">To Continue you need to be logged in.</string>
    <string name="login_signup_now">Login/SignUp Now</string>
    <string name="later">Later</string>
    <string name="currency_sym">$</string>
    <string name="food_not_found">Food not found</string>
    <string name="current_orders">Current Orders</string>
    <string name="past_orders">Past Orders</string>
    <string name="status">Status :</string>
    <string name="track">Track</string>
    <string name="add_delivery_note">Add delivery instructions</string>
    <string name="profile">Profile</string>
    <string name="payment_method">Select Payment Method</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="logout">Logout</string>
    <string name="rate_now">Rate Now</string>
    <string name="submit">Submit</string>
    <string name="driver_text">How was %s\'s food delivery?</string>
    <string name="restaurant_text">How was %s\'s food?</string>
    <string name="add_comment">Add comment</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact us</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">Change Language</string>
    <string name="notifications">Notifications</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="reviews">Reviews</string>
    <string name="REVIEWS">REVIEWS</string>
    <string name="continuetxt">Continue</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="bag">Cart</string>
    <string name="my_account">My Account</string>
    <string name="orders">Orders</string>
    <string name="paypal">Pay Pal</string>
    <string name="credit_or_debit_card">Credit/Debit Card</string>
    <string name="rating">Rating</string>
    <string name="all">All</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="empty_bag">Empty Bag</string>
    <string name="place_order">Place Order</string>
    <string name="setting_up">Setting up</string>
    <string name="apply">Apply</string>
    <string name="payment_mode">Payment Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="add">Add</string>
    <string name="offers">Offers</string>
    <string name="order_id">Order id</string>
    <string name="description">Description</string>
    <string name="or">Or</string>
    <string name="select_type">Select Type</string>
    <string name="complaint">Complaint</string>
    <string name="feedback">Feedback</string>
    <string name="Suggestions">Suggestions</string>
    <string name="refund">Refund</string>
    <string name="successfull">Successful</string>
    <string name="sendtoadmin">Your request is successfully sent to admin</string>
    <string name="ok">OK</string>
    <string name="min">min</string>
    <string name="please_select_type">Please select type</string>
    <string name="required">Required fields</string>
    <string name="sending_request">Sending Request</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="oops_went_wrong">Oops. Something went wrong</string>
    <string name="internetnotavailable">Internet not available</string>
    <string name="who_we_are">WHO WE ARE?</string>
    <string name="who_we_are_detail">Grigora Limited was established in 2019 to provide quick and reliable solutions to end users using technology. The company currently offers food delivery service to restaurant owners and consumers in a quick and reliable manner using technology.</string>
    <string name="our_vision">OUR VISION</string>
    <string name="our_vision_detail">To be the leading provider of quick and reliable solutions using technology</string>
    <string name="our_value_proposition">OUR VALUE PROPOSITION</string>
    <string name="our_value_detail">The business model will be operating on, Location Tracking, mobile application, ease of payment, wide range of services and our excellent customer service culture will definitely count as a competitive advantage for Grigora Limited. So also we have a team that can go all the way to give our clients value for their money; a team that are trained and equipped to pay attention to details and deliver services on time and safely</string>
    <string name="promotion">Promotion</string>
    <string name="no_promo_selected">No promo selected</string>
    <string name="wallet">My Wallet (₦ %s\)</string>
    <string name="transfr">Transfer</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirmation_message">Transfer ₦ %s\ to %s\ for %s?</string>
    <string name="confirmation_message1">Transfer ₦ %s\ to %s\?</string>
    <string name="enter_amount">Enter amount</string>
    <string name="pay">Pay</string>
    <string name="op1">₦100</string>
    <string name="op2">₦200</string>
    <string name="op3">₦500</string>
    <string name="add_amount">Add Amount</string>
    <string name="ratings">of 5 ratings</string>
    <string name="notdelivering">Sorry, we are not delivering to your address yet. We will be there soon.</string>
    <string name="changelocation">Change Location</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="quick_order">Quick Order</string>
    <string name="popular">Popular</string>
    <string name="wallet_drawer">Grigora Money : ₦</string>
    <string name="grigora_money">Grigora Money</string>
    <string name="deliver_to_you">DELIVER TO YOU IN</string>
    <string name="will_prepare_in">WILL PREPARE IN</string>
    <string name="deliver_in">Delivery in approximately %s\ minutes</string>
    <string name="delivery">delivery</string>
    <string name="Delivery">Delivery</string>
    <string name="apply_promocode">Apply Promocode</string>
    <string name="addnew">Add New</string>
    <string name="change_title">Change Location</string>
    <string name="change_desc">You may loose cart data after changing location</string>
    <string name="remove">Remove</string>
    <string name="promo_applied">Promocode applied</string>
    <string name="order_hash">ORDER#</string>
    <string name="waiting_for_confirmation">Waiting for confirmation</string>
    <string name="order_schduled">Order scheduled</string>
    <string name="order_prepared">Food prepared</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="picked">Order has been picked and on the way to you</string>
    <string name="delivered_by">Order delivered by</string>
    <string name="rejected_by_restaurant">Order rejected by Restaurant</string>
    <string name="being_prepared">Your Order is being prepared</string>
    <string name="orderedon">Ordered on :</string>
    <string name="almostready">Your order is ready to Dispatch</string>
    <string name="driver_assigned">Driver Assigned</string>
    <string name="food_delivery_message">How was food delivery?</string>
    <string name="no_thanks">No Thanks</string>
    <string name="food_message">How was your experience with %s\</string>
    <string name="meals_message">Tell us how you\'d rate these items?</string>
    <string name="ttext">I have read and agree to the</string>
    <string name="termsandconditions"> Terms &amp; conditions </string>
    <string name="select_language">Select Language</string>
    <string name="delivery_to">Delivery to</string>
    <string name="apt_number">Apt/Suite Number (optional)</string>
    <string name="loginn">Login</string>
    <string name="termsandconditions_social">By LOGIN or SIGNUP you will accept all Terms and Conditions and Privacy Policy of GRIGORA</string>
    <string name="didnot_got">Did\'nt got OTP ?</string>
    <string name="resend">Resend</string>
    <string name="search_restaurants_and_cusines">Search for restaurants, cuisines...</string>
    <string name="seemore">More</string>
    <string name="deliveringto">Delivering To</string>
    <string name="food">Food</string>
    <string name="pickup">Pickup</string>
    <string name="otpverification">OTP Verification</string>
    <string name="ratingg">Ratings:</string>
    <string name="rate_driver">Rate %s\</string>
    <string name="late_delivery">Late Delivery</string>
    <string name="bad_attitude">Bad Attitude</string>
    <string name="rude_beh">Rude Behaviour</string>
    <string name="unprofessional">Unprofessional</string>
    <string name="issue_driver">Had an issue with Driver</string>
    <string name="compliment_driver">Give a compliment</string>
    <string name="excelent">Excellent Service</string>
    <string name="in_time">Delivered in time</string>
    <string name="friendly">Friendly</string>
    <string name="delivery_pickup_info">"No DELIVERIES AVAILABLE NOW.\n STILL HUNGRY? TRY PICK UP"</string>
    <string name="delivery_pickup_info_more">"Sorry! No deliveries at the moment. You can still place order for self pickup. Want to see what's available?"</string>
    <string name="see_stores">See stores open for pickup</string>
    <string name="dismiss">Dismiss</string>
</resources>