<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_white"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">
    
    <TextView
        android:id="@+id/tv_name"
        style="@style/mediumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/rate_driver"
        android:textColor="?attr/textWhite"
        android:textSize="@dimen/_12sdp" />
    
    
    <com.github.siyamed.shapeimageview.CircularImageView
        android:id="@+id/img_driver"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        android:src="@drawable/driver" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:orientation="horizontal">
        
        <TextView
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_star_24dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/ratingg"
            android:textColor="?attr/textWhite"
            android:textSize="@dimen/_11sdp" />
        
        
        <TextView
            android:id="@+id/tv_rat"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/textWhite"
            android:textSize="@dimen/_10sdp"
            tools:text="4.0(800 Customers)" />
    
    </LinearLayout>
    
    <RatingBar
        android:id="@+id/rt_rating"
        style="@style/RatingBarToRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:progressBackgroundTint="@color/colorPrimaryAlpha"
        android:progressTint="@color/duskYellow" />
    
    <TextView
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/issue_driver"
        android:textColor="?attr/textWhite"
        android:textSize="@dimen/_12sdp" />
    
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="start"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/c1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@drawable/chip_deselected_bg"
                android:padding="@dimen/_8sdp"
                android:text="@string/late_delivery"
                android:textColor="?attr/textWhite" />
            
            <TextView
                android:id="@+id/c2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@drawable/chip_deselected_bg"
                android:padding="@dimen/_8sdp"
                android:text="@string/bad_attitude"
                android:textColor="?attr/textWhite" />
            
            <TextView
                android:id="@+id/c3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@drawable/chip_deselected_bg"
                android:padding="@dimen/_8sdp"
                android:text="@string/rude_beh"
                android:textColor="?attr/textWhite" />
            
            <TextView
                android:id="@+id/c4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@drawable/chip_deselected_bg"
                android:padding="@dimen/_8sdp"
                android:text="@string/unprofessional"
                android:textColor="?attr/textWhite" />
        
        </LinearLayout>
    
    </HorizontalScrollView>
    
    
    <TextView
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/compliment_driver"
        android:textColor="?attr/textWhite"
        android:textSize="@dimen/_12sdp" />
    
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="start"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/ch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@drawable/chip_deselected_bg"
                android:padding="@dimen/_8sdp"
                android:text="@string/excelent"
                android:textColor="?attr/textWhite" />
            
            <TextView
                android:id="@+id/ch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@drawable/chip_deselected_bg"
                android:padding="@dimen/_8sdp"
                android:text="@string/in_time"
                android:textColor="?attr/textWhite" />
            
            <TextView
                android:id="@+id/ch3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@drawable/chip_deselected_bg"
                android:padding="@dimen/_8sdp"
                android:text="@string/friendly"
                android:textColor="?attr/textWhite" />
        
        </LinearLayout>
    </HorizontalScrollView>
    
    
    <Button
        
        android:id="@+id/bt_rate_now"
        style="@style/normalText"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/btn_rounded"
        android:text="@string/rate_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />
    
    <Button
        android:id="@+id/bt_no_thanks"
        style="@style/normalText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/no_thanks"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/_12sdp" />
</LinearLayout>


