<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/successfull"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"

        android:gravity="center"
        android:text="@string/sendtoadmin"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/ok"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/btn_primary_rounded_back"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp" />


</LinearLayout>