<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rating_filter_bg"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">
    
    
    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/bags" />
    
    <TextView
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/delivery_pickup_info"
        android:textColor="?attr/textWhite"
        android:textSize="@dimen/_14sdp" />
    
    
    <TextView
        style="@style/normalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/delivery_pickup_info_more"
        android:textColor="?attr/searchHint"
        android:textSize="@dimen/_11sdp" />
    
    
    <Button
        android:id="@+id/bt_view"
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:background="@drawable/btn_rounded"
        android:elevation="1dp"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:text="@string/see_stores"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />
    
    <TextView
        android:id="@+id/bt_dismiss"
        style="@style/mediumText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@color/transparent"
        android:clickable="true"
        android:foreground="@drawable/selectable_item_background"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:text="@string/dismiss"
        android:textAllCaps="false"
        android:textColor="?attr/textWhite"
        android:textSize="@dimen/_14sdp" />

</LinearLayout>
